# rps

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  homework-rps.7z
Backend/: CMakeLists.txt  Game.cpp  Game.h  player.cpp  player.h
RockPaperScissors/: CMakeLists.txt  RockPaperScrissors  main.cpp
